fix spacing

--- a/styles.css
+++ b/styles.css
@@ -150,6 +150,7 @@ text-shadow: 0 3px 3px var(--main-dark-color);
 text-align: center;
 margin: 0;
 padding-bottom: 2rem;
+line-height: 3rem;
     }
 
     
